# cruds

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  origin-coverage.xml  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: development.yml  python-app.yml  python-publish.yml  release.yml
cruds/: __init__.py  auth.py  core.py  exception.py  interface.py  interface_builtin.yaml  interface_schema.yaml  interfaces.py  interfaces.yaml  interfaces_schema.yaml
cruds/interface_logic/: planhat.py
cruds/interface_methods/: planhat.py
cruds/interfaces/planhat/: __init__.py  configuration.yaml  logic.py
docs/: api.rst  authentication.rst  changelog.rst  conf.py  cruds.rst  development.rst  examples.rst  index.rst  interfaces.rst  modules.rst  planhat.rst  user_guide.rst
restful_client/: __init__.py  clients.py  core.py
restful_client2/: __init__.py  clients.py
src/cruds/: __init__.py  auth.py  core.py  exception.py  interface.py  interface_schema.yaml
src/cruds/interfaces/planhat/: configuration.yaml  exception.py  logic.py
src/restful_client2/: __init__.py  clients.py
tests/: test_auth.py  test_clients.py  test_core.py  test_interface.py
tests/interface_logic/: test_planhat.py
tests/interfaces/: test_planhat.py
