[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cruds"
dynamic = ["version"]
description = "CRUDs is a high level library for API's, and is ideal for automation system and/or interactive environments like Notebooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "John Brandborg", email = "john.brandborg+pypi@pm.me"}]
keywords = ["rest", "api", "crud", "http", "https", "planhat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "certifi>=2024.2.2",
    "urllib3>=2.5.0,<3.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "jsonschema>=4.21.1,<5.0.0",
]

[project.urls]
Changelog = "http://cruds.readthedocs.io/en/stable/changelog.html"
Documentation = "http://cruds.readthedocs.io/en/stable"
Source = "https://github.com/johnbrandborg/cruds"
Tracker = "https://github.com/johnbrandborg/cruds/issues"

[project.optional-dependencies]
rtd = ["sphinx"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.setuptools.dynamic]
version = {attr = "cruds.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src/", "tests/"]

[tool.ty.terminal]
error-on-warning = false

[tool.pytest.ini_options]
addopts = "--cov=src/ tests/"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "env/*",
    ".env/*",
    "venv/*",
    "tests/*",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "^if __name__ ==",
    "^\\s*except KeyboardInterrupt",
    "@abc.abstractmethod",
]
