[metadata]
name = RESTful-Client2
version = 0.1.3
description = RESTful is a simple API library for Humans, inspired by Python Requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnbrandborg/restful-client
author = John Brandborg
author_email = john.brandborg+pypi@pm.me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = restful api crud
project_urls =
    Source=https://github.com/johnbrandborg/restful-client
    Tracker=https://github.com/johnbrandborg/restful-client/issues

[options]
packages = find_namespace:
package_dir =
    = src
install_requires = urllib3
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
develop =
    flake8
    pytest
    pytest-cov

[tool:pytest]
addopts= --cov=. tests/

[coverage:run]
omit =
    env/*
    .env/*
    venv/*
    tests/*
    setup.py

[coverage:xml]
output = coverage.xml

[coverage:report]
show_missing = true
#fail_under = 60
exclude_lines =
    ^if __name__ ==
    ^\s*except KeyboardInterrupt

[flake8]
per-file-ignores = __init__.py:F401
