[metadata]
name = cruds
version = 1.0.2
description = CRUDs is a simple high level library for Humans, inspired by Python Requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnbrandborg/cruds
author = John Brandborg
author_email = john.brandborg+pypi@pm.me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = rest api crud http https
project_urls =
    Source=https://github.com/johnbrandborg/cruds
    Tracker=https://github.com/johnbrandborg/cruds/issues

[options]
packages = find:
install_requires =
    certifi
    urllib3
python_requires = >=3.8

[options.extras_require]
develop =
    flake8
    pytest
    pytest-cov

[tool:pytest]
addopts= --cov=. tests/

[coverage:run]
relative_files = True
omit =
    env/*
    .env/*
    venv/*
    tests/*
    setup.py

[coverage:xml]
output = coverage.xml

[coverage:report]
show_missing = true
exclude_lines =
    ^if __name__ ==
    ^\s*except KeyboardInterrupt

[flake8]
per-file-ignores = __init__.py:F401
