[metadata]
name = cruds
version = attr: cruds.__version__
description = CRUDs is a high level library for API's, and is ideal for automation system and/or interactive environments like Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnbrandborg/cruds
author = John Brandborg
author_email = john.brandborg+pypi@pm.me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = rest api crud http https planhat
project_urls =
    Changelog=http://cruds.readthedocs.io/en/stable/changelog.html
    Documentation=http://cruds.readthedocs.io/en/stable
    Source=https://github.com/johnbrandborg/cruds
    Tracker=https://github.com/johnbrandborg/cruds/issues

[options]
packages = find:
package_dir =
    =src
install_requires =
    certifi>=2024.2.2
    urllib3>=2.2.1,<3.0.0
    PyYAML>=6.0.1,<7.0.0
    jsonschema>=4.21.1,<5.0.0
python_requires = >=3.8,<4.0.0

[options.packages.find]
where = src

[options.package_data]
* =
    *.yml
    *.yaml

[options.extras_require]
develop =
    pre-commit
    pytest
    pytest-cov
    ruff
rtd =
    sphinx

[tool:pytest]
addopts= --cov=src/ tests/

[coverage:run]
branch = True
relative_files = True
omit =
    env/*
    .env/*
    venv/*
    tests/*
    setup.py

[coverage:xml]
output = coverage.xml

[coverage:report]
show_missing = true
exclude_lines =
    ^if __name__ ==
    ^\s*except KeyboardInterrupt
    @abc.abstractmethod
